[gd_scene load_steps=9 format=3 uid="uid://dgoy23tjkumpe"]

[ext_resource type="Script" uid="uid://lp0wln500jpy" path="res://Scripts/Classes/enemy.gd" id="1_quxat"]
[ext_resource type="Script" uid="uid://d3farf02gkq8e" path="res://Scripts/health.gd" id="3_tm0ch"]
[ext_resource type="Script" uid="uid://b3u4aiy6bgk1c" path="res://Scripts/Classes/finite_state_machine.gd" id="4_ulvqc"]
[ext_resource type="Script" uid="uid://bw6hejvpvmqbb" path="res://Scripts/states/pursuit.gd" id="5_5d1s0"]
[ext_resource type="Script" uid="uid://cuhbohka8opeu" path="res://Scripts/states/enemy_idle.gd" id="6_5d1s0"]
[ext_resource type="Script" uid="uid://sgyeob3hmfxb" path="res://Scripts/personal_space.gd" id="7_vskj4"]
[ext_resource type="Script" uid="uid://csrxxds2tne84" path="res://Scripts/debug_label.gd" id="8_w2043"]

[sub_resource type="CircleShape2D" id="CircleShape2D_w2043"]
radius = 14.035668

[node name="Enemy_runner" type="RigidBody2D" node_paths=PackedStringArray("health_component", "state_machine") groups=["enemy", "enemy_runner"]]
collision_layer = 4
collision_mask = 780
lock_rotation = true
contact_monitor = true
max_contacts_reported = 1
linear_damp = 3.0
script = ExtResource("1_quxat")
health_component = NodePath("HealthComponent")
state_machine = NodePath("StateMachine")
death_effect_color = Color(0.7882353, 0.28235295, 0.38431373, 1)
metadata/_custom_type_script = "uid://lp0wln500jpy"

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
visible = false
scale = Vector2(1.0625, 1.0625)
polygon = PackedVector2Array(0, -10, -10, 0, 0, 10, 10, 0)

[node name="CollisionShape2D2" type="Polygon2D" parent="."]
scale = Vector2(1.0625, 1.0625)
color = Color(0.79, 0.28440002, 0.3855202, 1)
polygon = PackedVector2Array(0, -10, -10, 0, 0, 10, 10, 0)

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("3_tm0ch")
max_health = 1
metadata/_custom_type_script = "uid://d3farf02gkq8e"

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state", "actor")]
script = ExtResource("4_ulvqc")
show_debug = false
initial_state = NodePath("Idle")
actor = NodePath("..")
metadata/_custom_type_script = "uid://b3u4aiy6bgk1c"

[node name="Pursuit" type="Node" parent="StateMachine" node_paths=PackedStringArray("state_idle")]
script = ExtResource("5_5d1s0")
target_player = true
state_idle = NodePath("../Idle")
metadata/_custom_type_script = "uid://55kpmp4krpql"

[node name="Idle" type="Node" parent="StateMachine" node_paths=PackedStringArray("move_state", "state_idle")]
script = ExtResource("6_5d1s0")
move_state = NodePath("../Pursuit")
state_idle = NodePath(".")
metadata/_custom_type_script = "uid://dkheav4fupoy2"

[node name="Personal Space" type="Area2D" parent="."]
visible = false
collision_mask = 4
script = ExtResource("7_vskj4")
valid_groups = Dictionary[String, int]({
"enemy": 0,
"enemy_flanker": 0,
"enemy_runner": 1,
"enemy_shield": 1,
"enemy_shooter": 0,
"player": 0
})

[node name="CollisionShape2D" type="CollisionShape2D" parent="Personal Space"]
shape = SubResource("CircleShape2D_w2043")
debug_color = Color(0.92681, 0.9257303, 1, 0.08235294)

[node name="Label" type="Label" parent="." node_paths=PackedStringArray("target_node")]
offset_left = -23.0
offset_top = -34.0
offset_right = 29.0
offset_bottom = -11.0
text = "HP"
script = ExtResource("8_w2043")
referenced_variable = "current_health"
target_node = NodePath("../HealthComponent")

[connection signal="hit" from="." to="HealthComponent" method="_on_value_received"]
[connection signal="tree_entered" from="." to="." method="_on_tree_entered"]
[connection signal="health_empty" from="HealthComponent" to="." method="die"]
[connection signal="body_entered" from="Personal Space" to="Personal Space" method="_on_body_entered"]
[connection signal="body_exited" from="Personal Space" to="Personal Space" method="_on_body_exited"]
